[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/bullet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Ammo.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 3.9812 )

[node name="Ammo" type="Node2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )

[node name="Bullet" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bullet"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 8.9407e-07, 2.38419e-07 )
scale = Vector2( 0.8, 0.4 )

[connection signal="area_entered" from="Bullet" to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="Bullet" to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
